Updated index file and main.css with cards structure and styles.

--- a/index.html
+++ b/index.html
@@ -1,46 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:200,400,600&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <title>Frontend Mentor | Four card feature section</title>
+  </head>
 
-  <title>Frontend Mentor | Four card feature section</title>
+  <body>
+    <div class="container">
+      <header>
+        <h2 class="heading-upper">Reliable, efficient delivery</h2>
+        <h2 class="heading-lower">Powered by Technology</h2>
 
-</head>
+        <p>
+          Our Artificial Intelligence powered tools use millions of project data
+          points to ensure that your project is successful.
+        </p>
+      </header>
 
-<body>
+      <div class="cards">
+        <div class="card">
+          <div class="card__heading">Supervisor</div>
+          <div class="card__content">
+            Monitors activity to identify project roadblocks
+          </div>
+          <div class="card__image">
+            <img src="images/icon-supervisor.svg" alt="Supervisor" />
+          </div>
+        </div>
 
+        <div class="card">
+          <div class="card__heading">Team Builder</div>
+          <div class="card__content">
+            Scans our talent network to create the optimal team for your project
+          </div>
+          <div class="card__image">
+            <img src="images/icon-team-builder.svg" alt="Supervisor" />
+          </div>
+        </div>
 
-  <h2>Reliable, efficient delivery</h2>
-  </h2>Powered by Technology</h2>
+        <div class="card">
+          <div class="card__heading">Karma</div>
+          <div class="card__content">
+            Regularly evaluates our talent to ensure quality
+          </div>
+          <div class="card__image">
+            <img src="images/icon-karma.svg" alt="Supervisor" />
+          </div>
+        </div>
 
-  <h5>Our Artificial Intelligence powered tools use millions of project data points
-    to ensure that your project is successful.</h5>
-
-  <div class="card">
-    <div class="card__heading">Supervisor</div>
-    <div class="card__content">Monitors activity to identify project roadblocks</div>
-  </div>
-
-  <div class="card">
-    <div class="card__heading">Team Builder</div>
-    <div class="card__content">Scans our talent network to create the optimal team for your project</div>
-  </div>
-
-  <div class="card">
-    <div class="card__heading">Karma</div>
-    <div class="card__content">Regularly evaluates our talent to ensure quality</div>
-  </div>
-
-  <div class="card">
-    <div class="card__heading">Calculator</div>
-    <div class="card__content">Uses data from past projects to provide better delivery estimates</div>
-  </div>
-</body>
-
+        <div class="card">
+          <div class="card__heading">Calculator</div>
+          <div class="card__content">
+            Uses data from past projects to provide better delivery estimates
+          </div>
+          <div class="card__image">
+            <img src="images/icon-calculator.svg" alt="Supervisor" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
